# conways_physics

./: .editorconfig  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
src/conways_physics/: __init__.py  __main__.py  app.py  automata.py  config.py  life.py  renderer.py  sim.py  species.py  terrain.py  utils.py  world.py
tests/: conftest.py
tests/integration/: test_predation_edge_branches.py  test_reproduction_and_misc.py  test_simulation_core.py  test_world.py
tests/unit/: test_ab_auto_spawn_cd.py  test_ab_eats_corpse.py  test_ab_retaliation.py  test_app_spawn_range.py  test_automata_motion.py  test_automata_weight.py  test_balanced_seeding.py  test_block_by_corpse_and_rock.py  test_bury_and_flash_and_gol.py  test_cd_tunneling.py  test_collision_with_terrain.py  test_corpse_decay.py  test_energy_color_mapping.py  test_flashes.py  test_flyer_drop_bias_path.py  test_flyer_ground_behavior.py  test_flyer_reproduction_altitude.py  test_flyer_spawn_altitude.py  test_idle_energy_drain.py  test_lander_climb_rules.py  test_lander_direction_choice.py  test_lander_jump.py  test_lander_opposite_fallback.py  test_lander_transformation.py  test_predation_energy_damp.py  test_predation_visibility.py  test_reproduction_bias.py  test_resize_reposition.py  test_rock_decay_and_blocking.py  test_seed_population.py  test_sim_helpers.py  test_species_and_life.py  test_stagnation_forced_move.py  test_starvation_counts.py  test_status_initializing.py  test_terrain_surface.py  (+4 more)
